action_server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    app: action-server
  name: action-server
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
      nodePort: 30081
  selector:
    app: action-server
status:
  loadBalancer: {}
