rasa-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    app2: rasa
  name: rasa
  namespace: default
spec:
  type: NodePort
  ports:
    - name: "5005"
      port: 5005
      targetPort: 5005
      #nodePort: 30083
  selector:
    app2: rasa
status:
  loadBalancer: {}
